objects/ER__c.object
<CustomObject>
    <description>Individual expense reports.</description>
    <fields>
        <fullName>Manager_For_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager For Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Ending__c</fullName>
        <inlineHelpText>Choose the last day of the month you are submitting expenses for</inlineHelpText>
        <label>Month Ending</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV__c</fullName>
        <label>PV</label>
        <summaryFilterItems>
            <field>ELI__c.PV_Direct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ELI__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Receipts_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field.  Checked by expRepButton.checkAtt if all Expense Line Items that require receipts have attachments.</description>
        <label>Receipts Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Total__c</fullName>
        <label>Requested Total</label>
        <summarizedField>ELI__c.Expenditure_Amount__c</summarizedField>
        <summaryForeignKey>ELI__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>PV Direct Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processed By Accounting</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Approved Total</label>
        <summarizedField>ELI__c.Expenditure_Amount__c</summarizedField>
        <summaryForeignKey>ELI__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Report-OLD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Manager_For_Approval__c</columns>
        <columns>Month_Ending__c</columns>
        <columns>Total__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinates>VPFinance</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Month_Ending__c</columns>
        <columns>Requested_Total__c</columns>
        <columns>Total__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processed By Accounting</value>
        </filters>
        <label>Closed</label>
        <sharedTo>
            <group>Accounting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Month_Ending__c</columns>
        <columns>Requested_Total__c</columns>
        <columns>Total__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approval Pending,PV Direct Approved,Approved</value>
        </filters>
        <label>Open</label>
        <sharedTo>
            <group>Accounting</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports-OLD</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>